--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,6 +17,13 @@ jobs:
 
     steps:
       -
+        name: Checkout code
+        uses: actions/checkout@v2
+      -
+        uses: actions/setup-go@v2
+        with:
+          go-version: '^1.16.3'
+      -
         name: "Build"
         run: ./build/build_binaries.sh 
         env:
