--- a/.github/workflows/release-earthly.yml
+++ b/.github/workflows/release-earthly.yml
@@ -14,6 +14,10 @@ jobs:
   tagged-release:
     name: "Tagged Release"
     runs-on: "ubuntu-latest"
+    env:
+      #DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+      #DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
+      FORCE_COLOR: 1
 
     steps:
       -
@@ -28,12 +32,12 @@ jobs:
         run: /tmp/earthly +build
 #        env:
 #          BUILD_DIR: /tmp/build_root/issuemon
-#      -
-#        uses: "marvinpinto/action-automatic-releases@latest"
-#        with:
-#          repo_token: "${{ secrets.GITHUB_TOKEN }}"
-#          automatic_release_tag: "latest"
-#          prerelease: true
-#          files: |
-#            ./dist_build/bin/issuelist
-#            ./dist_build/bin/grouplist
+      -
+        uses: "marvinpinto/action-automatic-releases@latest"
+        with:
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          automatic_release_tag: "latest"
+          prerelease: true
+          files: |
+            ./dist_build/bin/issuelist
+            ./dist_build/bin/grouplist
