--- a/.github/workflows/release-earthly.yml
+++ b/.github/workflows/release-earthly.yml
@@ -11,18 +11,25 @@ on:
       - "master"
 
 jobs:
-  tagged-release:
-    name: "Tagged Release"
+  build:
+    name: "Build binaries"
     runs-on: "ubuntu-latest"
     env:
-      #DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-      #DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
       FORCE_COLOR: 1
 
     steps:
       -
         name: Checkout code
         uses: actions/checkout@v2
+      -
+        name: Cache build result
+        uses: actions/cache@v2
+        env:
+          cache-name: cache-node-modules
+        with:
+          # npm cache files are stored in `~/.npm` on Linux/macOS
+          path: ./dist_build/
+          key: ${{ runner.os }}-dist_build-${{ github.sha }}
       - name: Download latest earthly
         run: |
           wget https://github.com/earthly/earthly/releases/download/v0.5.20/earthly-linux-amd64 \
@@ -32,6 +39,20 @@ jobs:
         run: /tmp/earthly +build
 #        env:
 #          BUILD_DIR: /tmp/build_root/issuemon
+
+  tagged-release:
+    name: "Tagged Release"
+    runs-on: "ubuntu-latest"
+    needs:
+      - build
+    #env:
+      #DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+      #DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
+
+    steps:
+      -
+        name: Checkout code
+        uses: actions/checkout@v2
       -
         uses: "marvinpinto/action-automatic-releases@latest"
         with:
